Bug 69637 - KRDC does not send key clicks to the server until "special keys" is used
Summary: KRDC does not send key clicks to the server until "special keys" is used
Status: RESOLVED FIXED
Alias: None
Product: krdc
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Arend van Beelen jr.
URL:
Keywords:
: 76591 (view as bug list)
Depends on:
Blocks:
 
Reported: 2003-12-04 19:22 UTC by Oded Arbel
Modified: 2006-11-05 20:32 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Oded Arbel 2003-12-04 19:22:59 UTC
Version:            (using KDE Devel)
Compiler:          gcc 3.3.1 
OS:          Linux

Using the RDP protocol (haven't tried VNC), after starting a connection I cannot log in to the server because keyboard events are not sent to the server and when I type nothing appears in the login box. 

To workaround that I need to click "special keys", type in a normal character and then everything works normally.
Comment 1 James 2004-01-24 03:05:25 UTC
I can confirm this, I was just about to file a report for the same thing.  Using RDP to connect to a Windows Server 2003 terminal server, I can't type anything until after I use the "special key" function.  KDE 3.2 RC1, compiled using Konstruct, on Debian unstable.
Comment 2 Aaron Williams 2004-02-09 21:53:53 UTC
I see the same thing with my Solaris setup when running KDE 3.2.0.
Comment 3 Tomas 2004-02-15 14:16:08 UTC
I have the same problem.
Sometimes it does work, sometimes it doesn't.
It's very strange.

This problem was in 3.2.0-pre2 and is in Final release too.
Comment 4 Martin Ostertag 2004-02-27 15:40:44 UTC
I have the same problem here with KDE 3.2 on Solaris
Comment 5 Arend van Beelen jr. 2004-02-29 18:14:33 UTC
CVS commit by arendjr: 

Fix bug #69637: KRDC does not send key clicks to the server until "special keys" is used.

Also commented the setPopupDelay(0) statements as they gave trouble with
recent Qt versions.

CCMAIL: 69637-done@bugs.kde.org


  M +3 -2      krdc.cpp   1.84


--- kdenetwork/krdc/krdc.cpp  #1.83:1.84
@@ -197,4 +197,5 @@ bool KRDC::start()
                 m_view, SLOT(pressKey(XEvent*)));
 
+        m_view->grabKeyboard();
         return m_view->start();
 }
@@ -460,5 +461,5 @@ void KRDC::switchToFullscreen(bool scali
         KToolBarButton *advancedButton = t->getButton(FS_ADVANCED_ID);
         QToolTip::add(advancedButton, i18n("Advanced options"));
-        advancedButton->setPopupDelay(0);
+        //advancedButton->setPopupDelay(0);
 
         QLabel *hostLabel = new QLabel(t);
@@ -575,5 +576,5 @@ void KRDC::switchToNormal(bool scaling)
                 KToolBarButton *advancedButton = t->getButton(3);
                 QToolTip::add(advancedButton, i18n("Advanced options"));
-                advancedButton->setPopupDelay(0);
+                //advancedButton->setPopupDelay(0);
 
                 if (m_layout)


Comment 6 Arend van Beelen jr. 2004-03-06 14:48:32 UTC
*** Bug 76591 has been marked as a duplicate of this bug. ***
Comment 7 Joseph Reagle 2004-03-10 21:15:10 UTC
FYI: Bug 77050 is the same as this.
http://bugs.kde.org/show_bug.cgi?id=77050
Comment 8 Joseph Reagle 2004-03-10 21:16:10 UTC
This happens with VNC as well.
Comment 9 Arend van Beelen jr. 2004-03-10 21:21:55 UTC
*** Bug 77050 has been marked as a duplicate of this bug. ***
Comment 10 Joseph Reagle 2004-03-10 21:24:39 UTC
Sorry, my report is for KRDC 4:3.2.1-1 0 in Debian Sid, one other on #debian-kde confirmed as well.
Comment 11 robert lindgren 2004-03-11 08:28:54 UTC
77050 has nothing to do with this bug. 77050 states that it's not possible to enter a password in the krdc password box, displayed by krdc when connecting with vnc. Not the password box display by the remote OS. Enable password in a vnc server an try to connect.
Comment 12 Joseph Reagle 2004-03-11 16:13:02 UTC
On Thursday 11 March 2004 02:28, robert lindgren wrote:
> ------- Additional Comments From r orcafat com  2004-03-11 08:28 -------
> 77050 has nothing to do with this bug. 77050 states that it's not
> possible to enter a password in the krdc password box, displayed by krdc
> when connecting with vnc. Not the password box display by the remote OS.
> Enable password in a vnc server an try to connect.

I believe it the same difference. Keyboard input in both rdp and vnc fail 
with the new 3.2s at the point of initial contact.

Comment 13 Rex Dieter 2004-03-22 22:12:04 UTC
I don't believe this is fixed.  

After applying this patch, now I get the same behavior as bug #77050, ie, I can't even type a password.  Previously I could type a password and get connected, but nothing in the vnc session would accept keyboard input.
Comment 14 Joseph Reagle 2004-04-19 23:16:10 UTC
For what's it's work, using 3.2.2 sid debs I can now use KRDC to access VNC with no problems.
Comment 15 Greg P. 2004-10-31 22:29:29 UTC
The same thing happens for me, but the specifics differ.

I'm running my KDE desktop at 1600x1200. When I request that resolution for the RDP connection, it starts up in fullscreen mode. No keyboard input is accepted. I have to exit fullscreen to use the 'Special Keys' button. When I do this, it still doesn't accept keyboard input (as opposed to the behavior reported above by others).

However, when I request 1024x768 for the RDP connection, everything works fine. Keyboard input is accepted from the start, with no 'Special Keys' or any other workaround.

Also, when I use rdesktop as a stand-alone program executed from the shell window with a resolution of 1600x1200 specified, keyboard input works fine.

It seems that the problem only happens when using the KDE front-end. I wouldn't care, but without the frontend I can't minimize the RDP session - instead, I have to disconnect to get back to my KDE desktop, and then re-connect to get back to the RDP desktop.

If it helps, I'm running KDE 3.3.0 on an AMD64 system. KDE is compiled from scratch for native 64-bit mode using Gentoo's portage system and GCC 3.4.2.
Comment 16 Hugo Rodrigues 2005-03-05 02:03:05 UTC
Unfortunatly this problem is still present in krdc from KDE 3.4.0-rc1. Is it possible to have this grave bug squashed before KDE 3.4 final comes out? I hope so. It turns krdc useless to the ignorant user :(
Comment 17 Hugo Rodrigues 2005-03-05 02:06:38 UTC
By the way, one other way to make the keys working (at least conecting thru RDP, the only one I tested) is to bring the window out of fulscreen mode. The keyboard input is then correctly handled. Returning the window to fulscreen then keeps the keyboard working.
Comment 18 felipe 2005-07-08 15:01:25 UTC
Yes! I got the same problem. And this solution (exit from full screen mode, type and then return to full screen mode has worked out perfectly).

But this still happens to kde 3.4.0
Comment 19 S Clark 2005-07-21 20:49:44 UTC
Also seeing it in Suse 9.3 "Professional" (KDE "3.4.0 level b") - same symptoms - on initial connect in fullscreen mode no keyboard entry works.

Trying to set this up to work as a windows terminal "kiosk" so fixing this apparently very old bug would be nice...
Comment 20 Steven Coutts 2005-10-02 14:46:41 UTC
Also happening in 3.5 alpha. Same symptoms as above, minimize krdc then back to full screen fixes this issue.

Qt: 3.3.4
KDE: 3.4.91 (beta1, >= 20050910)
Remote Desktop Connection: 3.4.91

Comment 21 Steven Coutts 2005-10-02 14:52:01 UTC
Also if I minimize the window then re-open it I can't type until I do the fullscreen fix.

Would be nice to get this old bug fixed.
Comment 22 Bram Schoenmakers 2005-10-05 11:28:48 UTC
SVN commit 467432 by bram:

Grab keyboard focus when initially set to fullscreen. Please re-open bug 69637 if it still doesn't work. I couldn't reproduce this problem anymore with this extra line of code.

BUG:69637



 M  +2 -0      krdc.cpp  


--- branches/KDE/3.5/kdenetwork/krdc/krdc.cpp #467431:467432
@@ -530,6 +530,8 @@
 			grabInput(qt_xdisplay(), winId());
 		m_view->grabKeyboard();
 	}
+  
+  m_view->switchFullscreen( true );
 }
 
 void KRDC::switchToNormal(bool scaling)
Comment 23 James Smith 2005-10-06 22:09:03 UTC
Bram;

You are amazing. This bug has plagued me for the past year!

Thank you so much!
Comment 24 Steven Coutts 2005-10-19 18:34:50 UTC
KDE 3.5beta2

The keys are no longer disabled when starting krdc in full-screen, but minimizing full screen and then restoring results in no keyboard input.
Comment 25 Bram Schoenmakers 2005-10-19 19:29:25 UTC
Steven, thank you for your feedback. I was also able to reproduce this behaviour and will try to fix this. However, I'm quite occupied at the moment with non KDE related things, so I hope I find time to fix it.
Comment 26 Steven Coutts 2005-10-19 21:14:59 UTC
No problem, it was the initial no keyboard response that was the most annoying for myself so it is much better than it was.

I haven't done any real programming for a long long time!! However, I will try and see if I can find what's wrong.

Cheers
Comment 27 Steven Coutts 2005-10-19 21:45:51 UTC
Nah, I've tried and it's a bit 'over my head' to be honest. I'd love to see the solution to this though.
Comment 28 Bram Schoenmakers 2005-10-26 18:21:35 UTC
SVN commit 474514 by bram:

Also grab keyboard when the view was minimized. Again, thanks to Steven for pointing this out.

CCBUG:69637
CCMAIL:scoutts@bcs.org.uk



 M  +2 -2      krdc.cpp  


--- branches/KDE/3.5/kdenetwork/krdc/krdc.cpp #474513:474514
@@ -530,7 +530,7 @@
 			grabInput(qt_xdisplay(), winId());
 		m_view->grabKeyboard();
 	}
-  
+
   m_view->switchFullscreen( true );
 }
 
@@ -700,7 +700,7 @@
 		    m_fullscreenResolution.height());
 	if (m_oldResolution.valid)
 		grabInput(qt_xdisplay(), winId());
-	m_view->grabKeyboard();
+	m_view->switchFullscreen( true );
 	KWin::setState(winId(), NET::StaysOnTop);
 
 	return QWidget::event(e);
Comment 29 Steven Coutts 2005-10-26 18:38:47 UTC
This works for me, that is about the only place I didn't try adding that line!!

Thanks Bram