Grab keyboard focus when initially set to fullscreen. Please re-open bug 69637 if it still doesn't work. I couldn't reproduce this problem anymore with this extra line of code.

BUG:69637


svn path=/branches/KDE/3.5/kdenetwork/krdc/; revision=467432